Updated lost/found submit form

--- a/submit-lost.html
+++ b/submit-lost.html
@@ -4,6 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost and Found Item Submission</title>
+    <style>
+        /* General Styles */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f8ff; /* AliceBlue */
+    color: #333;
+    margin: 0;
+    padding: 20px;
+}
+
+/* Form Container */
+form {
+    background-color: #ffffff;
+    border: 2px solid #3c99dc; /* Tufts Blue */
+    border-radius: 8px;
+    padding: 20px;
+    max-width: 500px;
+    margin: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Form Heading */
+h2 {
+    text-align: center;
+    color: #0f5298; /* Yale Blue */
+}
+
+/* Form Labels */
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+    color: #2565ae; /* Lapis Lazuli */
+}
+
+/* Form Inputs */
+input[type="text"],
+input[type="datetime-local"],
+textarea {
+    width: calc(100% - 22px);
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+/* Radio Buttons */
+input[type="radio"] {
+    margin-right: 5px;
+}
+
+/* File Input */
+input[type="file"] {
+    margin-bottom: 15px;
+}
+
+/* Submit Button */
+input[type="submit"] {
+    background-color: #3c99dc; /* Tufts Blue */
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #0f5298; /* Yale Blue */
+}
+
+    </style>
 </head>
 <body> 
     <h2>Lost and Found Item Submission Form</h2>
