--- a/submit-found.html
+++ b/submit-found.html
@@ -81,7 +81,8 @@
 </head>
 <body>
     <h2>Lost and Found Item Submission Form</h2>
-    <form action="/submit_item" method="post" enctype="multipart/form-data">
+    <form action="/upload" method="post" enctype="multipart/form-data">
+
         <label for="itemStatus">Item Status:</label><br>
         <input type="radio" id="lost" name="itemStatus" value="lost" required>
         <label for="lost">Lost</label><br>
@@ -100,11 +101,11 @@
         <label for="description">Description:</label><br>
         <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
 
-        <label for="itemImage">Upload Image:</label><br>
-        <input type="file" id="itemImage" name="itemImage" accept="image/*"><br><br>
+        <label for="lostItemImage">Upload Image:</label><br>
+        <input type="file" id="lostItemImage" name="lostItemImage" accept="image/*"><br><br>
 
         <label for="phoneNumber">Phone Number:</label><br>
-        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="e.g., 123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required><br><br>
+        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="e.g., o7-xxxx-xxxx" pattern="[0-9]{2}-[0-9]{4}-[0-9]{4}" required><br><br>
 
         <input type="submit" value="Submit">
     </form>
