--- a/submit-found.html
+++ b/submit-found.html
@@ -84,25 +84,25 @@
     <form action="/upload" method="post" enctype="multipart/form-data">
 
         <label for="itemStatus">Item Status:</label><br>
-        <input type="radio" id="lost" name="itemStatus" value="lost" required>
+        <input type="radio" id="lost" name="itemStatus" value="lost" >
         <label for="lost">Lost</label><br>
-        <input type="radio" id="found" name="itemStatus" value="found" required>
+        <input type="radio" id="found" name="itemStatus" value="found" >
         <label for="found">Found</label><br><br>
 
         <label for="itemName">Item Name:</label><br>
-        <input type="text" id="itemName" name="itemName" required><br><br>
+        <input type="text" id="itemName" name="itemName" ><br><br>
 
         <label for="location">Location:</label><br>
-        <input type="text" id="location" name="location" required><br><br>
+        <input type="text" id="location" name="location" ><br><br>
 
         <label for="dateTime">Date and Time:</label><br>
-        <input type="datetime-local" id="dateTime" name="dateTime" required><br><br>
+        <input type="datetime-local" id="dateTime" name="dateTime" ><br><br>
 
         <label for="description">Description:</label><br>
-        <textarea id="description" name="description" rows="4" cols="50" required></textarea><br><br>
+        <textarea id="description" name="description" rows="4" cols="50" ></textarea><br><br>
 
         <label for="phoneNumber">Phone Number:</label><br>
-        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="e.g., o7-xxxx-xxxx" pattern="[0-9]{2}-[0-9]{4}-[0-9]{4}" required><br><br>
+        <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="e.g., o7-xxxx-xxxx" ><br><br>
 
         <input type="submit" value="Submit">
 
@@ -115,7 +115,7 @@
                 <input type="submit" name="Submit" value="upload" /></p>
             </form>
         </fieldset>
-        
+
     </form>
 </body>
 </html>
