--- a/register.html
+++ b/register.html
@@ -136,16 +136,13 @@ function switchForm(form) {
             </form>
     
             <!-- Register Form -->
-            <form action="register.php" method="POST" form id="register-form" class="form hidden">
-                <h2>Register</h2>
-                <label for="register-username">Username:</label>
-                <input type="text" id="register-username" placeholder="Username" required />
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Email" required />
-                <label for="register-password">Password:</label>
-                <input type="password" id="register-password" placeholder="Password" required />
+            <form action="register.php" method="POST" form id="login-form">
+                <input type="text" id="username" name="username" placeholder="Enter username" required>
+                <input type="email" id="email" name="email" placeholder="Enter email" required>
+                <input type="password" id="password" name="password" placeholder="Enter password" required>
                 <button type="submit">Register</button>
-                <button type="button" onclick="switchForm('login')">Back to Login</button>
+                <button type="button" onclick="switchForm('register')">Register</button>
+                <button type="button" onclick="switchForm('forgot-password')">Forgot Password?</button>
             </form>
     
              <!-- Forgot Password Form -->
