--- a/submit-lost.html
+++ b/submit-lost.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <h2>Lost and Found Item Submission Form</h2>
-    <form id="itemForm" action="/submit_item" method="post" enctype="multipart/form-data">
+    <form id="itemForm" action="/submit_item.php" method="post" enctype="multipart/form-data">
         <label for="itemStatus">Item Status:</label>
         <input type="radio" id="lost" name="itemStatus" value="lost" required>
         <label for="lost">Lost</label>
