--- a/index_loggedin.html
+++ b/index_loggedin.html
@@ -6,6 +6,17 @@
     <title>Welcome</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    .profile a {
+    color: black;
+    text-decoration: none; /* Optional: Removes underline */
+}
+
+.profile a:hover {
+    color: blue;
+}
+
+</style>
 <body>
     <header>
         <div class="profile">
