updated user profile section

--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
         <form action="register.php" method="POST">
             <input type="text" name="username" placeholder="Enter username" required>
             <input type="email" name="email" placeholder="Enter email" required>
-            <input type="tel" name="phone" placeholder="Enter phone number" pattern="[0-9]{10}" required>
+            <input type="tel" name="phone" placeholder="Enter phone number" required>
             <input type="password" name="password" placeholder="Enter password" required>
             <button type="submit">Register</button>
         </form>
