added different web pages to display the lost items

--- a/index_loggedin.html
+++ b/index_loggedin.html
@@ -15,6 +15,13 @@
 .profile a:hover {
     color: blue;
 }
+.h1 {
+    font-size: 24px;
+    margin: 10px 0;
+    text-align: center;
+    display: block;
+}
+
 
 </style>
 <body>
@@ -32,19 +39,28 @@
     <p class="center-text"><b>Welcome to our site to view, claim, and post your lost item</b></p>
 
     <div class="container">
-        <div class="section" id="identification-cards">
-            <h2>Identification Cards</h2>
+        <div class="section" >
+            <a href="identification_cards.php">
+                <h2>Identification Cards</h2>
             <p>View and report lost identification cards, Qwetu Hostels Cards, Passports.</p>
+            </a>
+            
         </div>
 
-        <div class="section" id="electronic-devices">
-            <h2>Electronic Devices</h2>
-            <p>Check for lost phones, laptops, and other electronic devices.</p>
+        <div class="section" >
+            <a href="electronics.php">
+                <h2>Electronic Devices</h2>
+                <p>Check for lost phones, laptops, and other electronic devices.</p>
+            </a>
+
         </div>
 
-        <div class="section" id="personal-items">
-            <h2>Personal Items</h2>
-            <p>Find and report missing personal belongings such as bags, water bottles, keys, or accessories.</p>
+        <div class="section" >
+            <a href="personal_items.php">
+                <h2>Personal Items</h2>
+                <p>Find and report missing personal belongings such as bags, water bottles, keys, or accessories.</p>
+            </a>
+            
         </div>
     </div>
 
